syntax = "proto3";

package envoy.config.filter.network.konvoy.v2alpha;

option go_package = "v2alpha";

option java_outer_classname = "KonvoyProto";
option java_multiple_files = true;
option java_package = "io.envoyproxy.envoy.config.filter.network.konvoy.v2alpha";

import "google/protobuf/any.proto";

import "envoy/api/v2/core/grpc_service.proto";

import "validate/validate.proto";

// [#protodoc-title: Konvoy]
// Out-of-process request filtering :ref:`configuration overview <config_network_filters_konvoy>`.

// [#proto-status: experimental]
// Konvoy network filter config.
message Konvoy {

    // The prefix to use when emitting statistics.
    string stat_prefix = 1 [(validate.rules).string.min_bytes = 1];

    // gRPC service configuration (default timeout: 200ms).
    envoy.api.v2.core.GrpcService grpc_service = 2;

    // Configuration to pass through to individual Konvoy Services,
    // i.e. "Network Konvoy" Service.
    message PassThroughConfigPerService {

        // Implementation-specific configuration of "Http Konvoy" Service.
        // E.g., configuration of Kafka Konvoy Service
        // would be completely different from the one of PostgreSQL Konvoy Service.
        google.protobuf.Any network_konvoy = 1;
    }

    // Configuration to pass through to individual Konvoy Services,
    // i.e. "Http Konvoy" Service.
    PassThroughConfigPerService per_service_config = 3;
}
